--- a/lessons/lesson03_numpyandpandas/slides/lec_03_numpy_and_pandas.slides.html
+++ b/lessons/lesson03_numpyandpandas/slides/lec_03_numpy_and_pandas.slides.html
@@ -2960,6 +2960,10 @@ In&nbsp;[]:
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="io">I/O</h3>
 <p>I/O is straightforward with, for example, pd.read_csv or df.to_csv</p>
+</div></section><section>
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="the-benefits-of-open-source">The benefits of open source:</h4>
+<p>Let's look under x's in plt modules</p>
 </div></section>
     </section><section>
     <section>
